fixed 10 reasion gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2225,5 +2225,7 @@ margin-left: -35px;
   .men-list li{
     text-align: left !important;
   }
-  
+  .column2{
+    margin-top: -85px !important;
+  }
 }
